# JNIDemo

./: README.md  settings.gradle
JNIDEMO/: settings.gradle
JNIDEMO/app/: build.gradle
JNIDEMO/app/src/main/: AndroidManifest.xml
JNIDEMO/app/src/main/cpp/: CMakeLists.txt  SoaHacImpl.cpp  SoaWindowsImpl.cpp
JNIDEMO/app/src/main/cpp/header/: SoaHacImpl.h  Utils.h  calculator_client.h
JNIDEMO/app/src/main/cpp/includes/: calculatorclient_network_binding.h
JNIDEMO/app/src/main/cpp/src/: Utils.cpp
JNIDEMO/app/src/main/java/ltd/qisi/jnidemo/: MainActivity.kt  SoaHACManager.kt
JNIDEMO/common_modlue/: build.gradle
JNIDEMO/common_modlue/src/androidTest/java/ltd/qisi/soa/: ExampleInstrumentedTest.kt
JNIDEMO/common_modlue/src/main/: AndroidManifest.xml
JNIDEMO/common_modlue/src/main/aidl/ltd/qisi/soa/: ISOAServiceManager.aidl  IServiceConnection.aidl  ServiceContext.aidl
JNIDEMO/common_modlue/src/main/aidl/ltd/qisi/soa/app/server/: ITestInterface.aidl
JNIDEMO/common_modlue/src/main/aidl/ltd/qisi/soa/hal/server/: IHACVehicleManager.aidl  ISoaCall.aidl
JNIDEMO/common_modlue/src/test/java/ltd/qisi/soa/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/ltd/qisi/jnidemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SoaHacImpl.cpp  SoaWindowsImpl.cpp  commonDef.h  hac-lib.cpp  window-lib.cpp
app/src/main/cpp/header/: SoaHacImpl.h  SoaInterface.h  SoaWindowsImpl.h  Utils.h
app/src/main/cpp/includes/: calculatorserver_network_binding.h
app/src/main/cpp/includes/huawei/: calculatorinterface_proxy.h
app/src/main/cpp/lib/: calculator_client.h
app/src/main/java/ltd/qisi/jnidemo/: MainActivity.kt  SoaHACManager.kt  SoaServerInterface.kt  SoaWindowManager.kt
app/src/main/java/ltd/qisi/jnidemo/server/: SoaServerImpl.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/ltd/qisi/jnidemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
